--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ h2{
     text-align: center;
     padding: 10px 0px;
 }
+#horn:hover{
+    cursor: pointer;
+}
 input{
     width:300px;
     outline: none;
