--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ option {
     align-items: center;
     position: relative;
     top: 30px;
+    padding: 0 20%;
 }
 h2{
     display: block;
@@ -98,6 +99,21 @@ input{
     outline: none;
     background-color: #34495e;
     color: white;
+}
+
+#check_button{
+    width: 100%;
+    height: 60px;
+    color: white;
+    background-color: #207e28;
+    max-width: 250px;
+    display: inline-block;
+    font-size: 30px;
+    border: none;
+    border-radius: 5px;
+}
+#check_button:hover{
+    cursor: pointer;
 }
 
 #check_result{
