--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    --progress-bar-value:0%;
+    --progress-color:rgb(88, 242, 2);
+    --progress-height:10px;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -66,7 +72,7 @@ option {
     flex-direction: column;
     align-items: center;
     position: relative;
-    top: 15px;
+    /* top: 15px; */
 }
 h2{
     display: block;
@@ -76,6 +82,34 @@ h2{
 }
 #horn:hover{
     cursor: pointer;
+}
+/* 进度条的相关样式 */
+.progress_container{
+    width: 100%;
+    margin: 0px;
+    /* border: 1px solid var(--progress-color); */
+    border-radius: 5px;
+    height: var(--progress-height);
+    overflow: hidden;
+    background-color: white;
+}
+.progress_bar{
+    background-color: var(--progress-color);
+    width: var(--progress-bar-value);
+    border-radius: 5px;
+    height: var(--progress-height);
+    transition-duration: .4s;
+    transition-property: width;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.progress_bar_shadow{
+    width: 100%;
+    height: 35%;
+    background-color: rgb(121,214,53);
+    margin: 0 5% 5px 5px;
+    /* margin-bottom: 10%; */
 }
 /* 输入框样式 */
 .answer{
