--- a/style.css
+++ b/style.css
@@ -118,6 +118,14 @@ h2{
     
 }
 /* 输入框样式 */
+.input_area{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+}
+
 .answer{
     width:200px;
     outline: none;
@@ -202,6 +210,27 @@ h2{
     color: wheat;;
 }
 
+/* 输入 umlaut 字母：ä, ö, ü, Ä, Ö, Ü, ß*/
+.umlauts_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.umlauts_button{
+    display: inline-block;
+    color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #915e0d;
+    font-size: 20px;
+    font-family: inherit;
+}
+
+
 #check_button{
     width: 100%;
     height: 60px;
@@ -212,6 +241,7 @@ h2{
     font-size: 30px;
     border: none;
     border-radius: 5px;
+    font-family: inherit;
 }
 #check_button:hover{
     cursor: pointer;
