--- a/style.css
+++ b/style.css
@@ -83,9 +83,21 @@ h2{
     text-align: center;
     padding: 10px 0px;
 }
-#horn:hover{
-    cursor: pointer;
+
+#horn_container{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
+
+#horn_container:hover{
+    cursor: pointer;
+    
+}
+
+/* #horn:hover{
+    cursor: pointer;
+} */
 /* 进度条的相关样式 */
 .progress_container{
     width: 100%;
@@ -233,12 +245,13 @@ h2{
 
 #check_button{
     width: 100%;
-    height: 60px;
+    /* height: 60px; */
     color: white;
     background-color: #207e28;
     max-width: 250px;
     display: inline-block;
-    font-size: 30px;
+    font-size: 25px;
+    padding: 5px 0;
     border: none;
     border-radius: 5px;
     font-family: inherit;
